Fix the grid column width reset on mobile devices (see #5584)

--- a/assets/contao/css/grid-uncompressed.css
+++ b/assets/contao/css/grid-uncompressed.css
@@ -193,8 +193,8 @@
 	 * Show all columns underneath each other
 	 */
 	*[class*="grid"] {
-		float:none;
-		display:block;
-		width:auto;
+		float:none !important;
+		display:block !important;
+		width:auto !important;
 	}
 }
